--- a/src/exocortex/wwwroot/css/site.css
+++ b/src/exocortex/wwwroot/css/site.css
@@ -32,3 +32,27 @@ textarea {
         z-index: 10 !important;
     }
 }
+
+
+/* Tile grid*/
+  
+ #wrap {
+      overflow: hidden;
+    }
+    .box {
+      width: 20%;
+      padding-bottom: 20%;
+      color: #FFF;
+      position: relative;
+      float: left;
+    }
+    .innerContent {
+      position: absolute;
+      left: 1px;
+      right: 1px;
+      top: 1px;
+      bottom: 1px;
+      background: #66F;
+      padding: 10px;
+    }
+
