--- a/src/exocortex/Views/Shared/_Layout.cshtml
+++ b/src/exocortex/Views/Shared/_Layout.cshtml
@@ -12,9 +12,12 @@
         <environment names="Staging,Production">
             <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
                   asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-            <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/>
+            <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/>
         </environment>
+        
+
+
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -49,19 +52,50 @@
         <environment names="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-            <script src="~/js/site.js" asp-append-version="true"></script>
+            <script src="~/lib/angular2-polyfills.js"></script>
+            <script src="~/lib/system.src.js"></script>
+            <script src="~/lib/Rx.js"></script>
+            <script src="~/lib/angular2.dev.js"></script>
+            <script src="~/js/allTranspiled.js" asp-append-version="true"></script>
         </environment>
         <environment names="Staging,Production">
             <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
                     asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                     asp-fallback-test="window.jQuery">
+
             </script>
             <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/bootstrap.min.js"
                     asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                     asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+
+
             </script>
+
             <script src="~/js/site.min.js" asp-append-version="true"></script>
+
+
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+            <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+            <script src="~/lib/angular2-polyfills.min.js"></script>
+            <script src="~/lib/system.src.js"></script>
+            <script src="~/lib/Rx.min.js"></script>
+            <script src="~/lib/angular2.dev.js"></script>
+            <script src="~/js/allTranspiled.js" asp-append-version="true"></script>
         </environment>
+
+
+        <script>
+            System.config({
+                packages: {
+                    app: {
+                        format: 'register',
+                        defaultExtension: 'js'
+                    }
+                }
+            });
+            System.import('main')
+                .then(null, console.error.bind(console));
+        </script>
 
         @RenderSection("scripts", required: false)
     </body>
